add content & made images local

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Arduino OLA Presentation</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -51,7 +51,7 @@
         <li>Let's make something!</li>
     </ol>
 </div>
-<img src="http://upload.wikimedia.org/wikipedia/commons/4/42/Arduino_Uno_logo.png"/>
+<img src="images/Arduino_Uno_logo.png" alt="http://upload.wikimedia.org/wikipedia/commons/4/42/Arduino_Uno_logo.png"/>
 </section>
 
 <section>
@@ -83,12 +83,13 @@
         <h2>How it works</h2>
         <div>Anatomy of an Arduino</div>
         <div>
-            <img src="http://arduino.cc/en/uploads/Main/ArduinoDiecimilaComponents.jpg">
+            <img src="images/ArduinoDiecimilaComponents.jpg" alt="http://arduino.cc/en/uploads/Main/ArduinoDiecimilaComponents.jpg">
         </div>
     </section>
 </section>
 
 <section>
+	<section>
     <h2>What's it Good for?</h2>
     <div>
         <ul>
@@ -102,6 +103,14 @@
             <li class="fragment">Hacking</li>
         </ul>
     </div>
+	</section>
+	<section>
+	<h2>Speaking of Hacking</h2>
+	<div>
+		<img alt="http://img.wonderhowto.com/img/original/34/06/63478831243214/0/634788312432143406.jpg" src="images/634788312432143406.jpg">
+		<p class="fragment"><a target="_blank" href="http://null-byte.wonderhowto.com/inspiration/digital-lock-picking-simple-arduino-hack-opens-millions-hotel-keycard-doors-0138312/">200 Milliseconds</a></p>
+	</div>
+	</section>
 </section>
 <section>
     <h2>Why would i use this in a library?</h2>
@@ -117,7 +126,7 @@
     <section>
         <h2>Real-World Library Examples</h2>
         <p>
-    	    <img src="https://pbs.twimg.com/media/A0v98BRCQAAO5ad.jpg" style="">
+    	    <img src="images/A0v98BRCQAAO5ad.jpg" alt="https://pbs.twimg.com/media/A0v98BRCQAAO5ad.jpg" style="">
 	    </p>
 </section>
 <section>
@@ -149,6 +158,10 @@
     </div>
 </section>
 <section>
+    <h2>The Tabulatron</h2>
+	<p><a target="_blank" href="https://docs.google.com/spreadsheet/ccc?key=0AicMfKa7wo4FdHdaS1NkdEtHY2Y5YkNjaDVfNGFpSkE#gid=0" style= ""> <img src="images/tabulatron_guts.jpg" ></a><br><a target="_blank" href="https://github.com/elibtronic/tabulatron">src</a></p>
+</section>
+<section>
     <h2>Other potential Library applications:</h2>
     <div>
         <ul>
@@ -174,13 +187,16 @@
     </div>
 </section>
 <section>
-            <img src="http://cdn.memegenerator.net/instances/400x/27220171.jpg" style="">
+            <img src="images/27220171.jpg" alt="http://cdn.memegenerator.net/instances/400x/27220171.jpg" style="">
 </section>
 <section>
     <h2>Questions?</h2>
     <div>
-        <img src="http://cdn.memegenerator.net/instances/400x/23691780.jpg"  class="fragment">
+        <img src="images/23691780.jpg" alt="http://cdn.memegenerator.net/instances/400x/23691780.jpg"  class="fragment">
         <br>
+		<ul>
+			<li class="fragment"> Jonathan Younker <a href="https://twitter.com/jtyounker">@jtyounker</a></li>
+			<li class="fragment"> Tim Ribaric <a href="http://twitter.com/elibtronic">@elibtronic</a></li>
     </div>
 </section>
 </div>
