OLA Meeting Prep Meeting #2 Edits

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>Brock University</p>
     </section>
     <section>
-        <h2>Agenda:</h2>
+        <h2>Agenda:</h2><jonathan />
 <div>
     <ol>
         <li>What is it?</li>
@@ -56,9 +56,10 @@
 
 <section>
     <section>
-        <h2>What is it?</h2>
+        <h2>What is it?</h2><jonathan />
         <div>
             <ul>
+            	<li class="fragment">A prototyping platform</li>
                 <li class="fragment">A 'single board microprocessor</li>
                 <li class="fragment">Open source hardware</li>
                 <li class="fragment">Open source software</li>
@@ -69,7 +70,7 @@
         </div>
     </section>
 	<section>
-	    <h2>A Brief History of Arduino</h2>
+	    <h2>A Brief History of Arduino</h2><jonathan />
 	    <div>
 	        <ul>
 	            <li class="fragment">First built in 2005, in Ivrea, Italy</li>
@@ -80,7 +81,7 @@
 	    </div>
 	</section>
     <section>
-        <h2>How it works</h2>
+        <h2>How it works</h2><jonathan />
         <div>Anatomy of an Arduino</div>
         <div>
             <img src="images/ArduinoDiecimilaComponents.jpg" alt="http://arduino.cc/en/uploads/Main/ArduinoDiecimilaComponents.jpg">
@@ -90,11 +91,12 @@
 
 <section>
 	<section>
-    <h2>What's it Good for?</h2>
+    <h2>What's it good for?</h2><tim />
     <div>
         <ul>
             <li class="fragment">"Internet of Things"</li>
             <li class="fragment">Small, low-power, low-cost applications</li>
+            <li class="fragment">Same hardware, different software applications</li>
             <li class="fragment">
                 <a href="http://www.instructables.com/id/Garduino-Gardening-Arduino/" style="line-height: 1.2em; text-align: center; letter-spacing: -0.02em;">Garduino</a>
             </li>
@@ -105,7 +107,7 @@
     </div>
 	</section>
 	<section>
-	<h2>Speaking of Hacking</h2>
+	<h2>Speaking of Hacking</h2><tim />
 	<div>
 		<img alt="http://img.wonderhowto.com/img/original/34/06/63478831243214/0/634788312432143406.jpg" src="images/634788312432143406.jpg">
 		<p class="fragment"><a target="_blank" href="http://null-byte.wonderhowto.com/inspiration/digital-lock-picking-simple-arduino-hack-opens-millions-hotel-keycard-doors-0138312/">200 Milliseconds</a></p>
@@ -113,7 +115,7 @@
 	</section>
 </section>
 <section>
-    <h2>Why would i use this in a library?</h2>
+    <h2>Why would i use this in a library?</h2><tim />
     <div>
         <ul>
                 <li class="fragment">Community engagement</li>
@@ -124,13 +126,14 @@
 </section>
 <section>
     <section>
-        <h2>Real-World Library Examples</h2>
+        <h2>Real-World Library Examples</h2><jonathan />
+        <h4>The Barcodinator</h4>
         <p>
     	    <img src="images/A0v98BRCQAAO5ad.jpg" alt="https://pbs.twimg.com/media/A0v98BRCQAAO5ad.jpg" style="">
 	    </p>
 </section>
 <section>
-    <h2>The Barcodinator</h2>
+    <h2>The Barcodinator</h2><jonathan />
     <div>
         <ul>
             <li>Problem</li>
@@ -144,38 +147,39 @@
     </div>
 </section>
 <section>
-    <h2>The Tabulatron</h2>
-    <div>
-        <ul>
-            <li>Problem</li>
-            <li>Initial request</li>
-            <li>Proposed solution</li>
-            <li>Prototype</li>
-            <li>Issues encountered</li>
-            <li>Revisions</li>
-            <li>Lessons learned</li>
-        </ul>
-    </div>
-</section>
-<section>
-    <h2>The Tabulatron</h2>
+    <h2>The Tabulatron</h2><tim />
 	<p><a target="_blank" href="https://docs.google.com/spreadsheet/ccc?key=0AicMfKa7wo4FdHdaS1NkdEtHY2Y5YkNjaDVfNGFpSkE#gid=0" style= ""> <img src="images/tabulatron_guts.jpg" ></a><br><a target="_blank" href="https://github.com/elibtronic/tabulatron">src</a></p>
 </section>
 <section>
-    <h2>Other potential Library applications:</h2>
+    <h2>The Tabulatron</h2><tim />
+    <div>
+        <ul>
+            <li>Problem</li>
+            <li>Initial request</li>
+            <li>Proposed solution</li>
+            <li>Prototype</li>
+            <li>Issues encountered</li>
+            <li>Revisions</li>
+            <li>Lessons learned</li>
+        </ul>
+    </div>
+</section>
+<section>
+    <h2>Other potential Library applications:</h2><jonathan /><tim />
     <div>
         <ul>
             <li class="fragment">Face tracking i/o gate counts</li>
             <li class="fragment">Web-enabled gate counts</li>
             <li class="fragment">Gathering data about the library</li>
             <li class="fragment">Physical interfaces for sign-ups</li>
-            <li class="fragment">...</li>
+            <li class="fragment">Self-check</li>
+            <li class="fragment">…</li>
         </ul>
     </div>
 </section>
 </section>
 <section>
-    <h2>Let's make something!</h2>
+    <h2>Let's make something!</h2><jonathan /><tim />
     <div>How many laptops are left?</div>
     <div>
         <ul>
@@ -199,6 +203,17 @@
 			<li class="fragment"> Tim Ribaric <a href="http://twitter.com/elibtronic">@elibtronic</a></li>
     </div>
 </section>
+<section>
+	<h2>Resources</h2><jonathan /><tim />
+	<div>
+		<ul>
+			<li><a href="http://arduino.cc">Official Arduino webpage</a></li>
+			<li><a href="http://playground.arduino.cc/projects/ideas">Arduino Playground</a></li>
+			<li><a href="http://www.instructables.com">Instructables</a></li>
+			<li><a href="http://makeprojects.com/">Make: Projects</a></li>
+			<li>O'Reilly books</li>
+		</ul>
+	</div>
 </div>
 
 
