Processing and Arduino code for example

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div>
     <ol>
         <li>What is it?</li>
-        <li>What's it good for?</li>
+        <li>What's it good for? And not?</li>
         <li>How does it work?</li>
         <li>Arduino in the Library</li>
         <li>Examples (show and tell)</li>
@@ -60,7 +60,7 @@
         <div>
             <ul>
             	<li class="fragment">A prototyping platform</li>
-                <li class="fragment">A 'single board microprocessor</li>
+                <li class="fragment">A 'single board microprocessor'</li>
                 <li class="fragment">Open source hardware</li>
                 <li class="fragment">Open source software</li>
                 <li class="fragment">Microcontroller (ATmega chips)</li>
