Post OLA Prep meeting #3 changes

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <p>Jonathan Younker &amp; Tim Ribaric</p>
         <p>Brock University</p>
     </section>
+    <section data-state="alert">
+    	<h1>Disclaimer</h1>
+    </section>
     <section>
         <h2>Agenda:</h2><jonathan />
 <div>
@@ -59,13 +62,13 @@
         <h2>What is it?</h2><jonathan />
         <div>
             <ul>
-            	<li class="fragment">A prototyping platform</li>
-                <li class="fragment">A 'single board microprocessor'</li>
-                <li class="fragment">Open source hardware</li>
-                <li class="fragment">Open source software</li>
-                <li class="fragment">Microcontroller (ATmega chips)</li>
-                <li class="fragment">Integrated Development Environment (IDE)</li>
-                <li class="fragment">Software: C or C++ (wait, don't leave!)</li>
+            	<li>A prototyping platform</li>
+                <li>A 'single board microprocessor'</li>
+                <li>Open source hardware</li>
+                <li>Open source software</li>
+                <li>Microcontroller (ATmega chips)</li>
+                <li>Integrated Development Environment (IDE)</li>
+                <li>Software: C or C++ (wait, don't leave!)</li>
             </ul>
         </div>
     </section>
@@ -73,10 +76,10 @@
 	    <h2>A Brief History of Arduino</h2><jonathan />
 	    <div>
 	        <ul>
-	            <li class="fragment">First built in 2005, in Ivrea, Italy</li>
-	            <li class="fragment">Grew out of Wiring, a similar project</li>
-	            <li class="fragment">Quickly became popular with makers/hobbyists</li>
-	            <li class="fragment">Many different models, updates, features</li>
+	            <li>First built in 2005, in Ivrea, Italy</li>
+	            <li>Grew out of Wiring, a similar project</li>
+	            <li>Quickly became popular with makers/hobbyists</li>
+	            <li>Many different models, updates, features</li>
 	        </ul>
 	    </div>
 	</section>
@@ -94,15 +97,15 @@
     <h2>What's it good for?</h2><tim />
     <div>
         <ul>
-            <li class="fragment">"Internet of Things"</li>
-            <li class="fragment">Small, low-power, low-cost applications</li>
-            <li class="fragment">Same hardware, different software applications</li>
-            <li class="fragment">
+            <li>"Internet of Things"</li>
+            <li>Small, low-power, low-cost applications</li>
+            <li>Same hardware, different software applications</li>
+            <li>
                 <a href="http://www.instructables.com/id/Garduino-Gardening-Arduino/" style="line-height: 1.2em; text-align: center; letter-spacing: -0.02em;">Garduino</a>
             </li>
-            <li class="fragment">Synthesizers</li>
-            <li class="fragment">Robotics</li>
-            <li class="fragment">Hacking</li>
+            <li>Synthesizers</li>
+            <li>Robotics</li>
+            <li>Hacking</li>
         </ul>
     </div>
 	</section>
@@ -110,17 +113,27 @@
 	<h2>Speaking of Hacking</h2><tim />
 	<div>
 		<img alt="http://img.wonderhowto.com/img/original/34/06/63478831243214/0/634788312432143406.jpg" src="images/634788312432143406.jpg">
-		<p class="fragment"><a target="_blank" href="http://null-byte.wonderhowto.com/inspiration/digital-lock-picking-simple-arduino-hack-opens-millions-hotel-keycard-doors-0138312/">200 Milliseconds</a></p>
+		<p><a target="_blank" href="http://null-byte.wonderhowto.com/inspiration/digital-lock-picking-simple-arduino-hack-opens-millions-hotel-keycard-doors-0138312/">200 Milliseconds</a></p>
 	</div>
+	</section>
+	<section>
+		<h2>What it's <em>not</em></h2>
+		<div>
+			<ul>
+				<li>A personal computer</li>
+				<li>High performance PC</li>
+				<li>Raspberry Pi</li>
+			</ul>
+		</div>
 	</section>
 </section>
 <section>
     <h2>Why would i use this in a library?</h2><tim />
     <div>
         <ul>
-                <li class="fragment">Community engagement</li>
-                <li class="fragment">To solve problems</li>
-                <li class="fragment">Why not?</li>
+                <li>Community engagement</li>
+                <li>To solve problems</li>
+                <li>Why not?</li>
         </ul>
     </div>
 </section>
@@ -143,6 +156,7 @@
             <li>Issues encountered</li>
             <li>Revisions</li>
             <li>Lessons learned</li>
+            <li>Statistics</li>
         </ul>
     </div>
 </section>
@@ -168,12 +182,11 @@
     <h2>Other potential Library applications:</h2><jonathan /><tim />
     <div>
         <ul>
-            <li class="fragment">Face tracking i/o gate counts</li>
-            <li class="fragment">Web-enabled gate counts</li>
-            <li class="fragment">Gathering data about the library</li>
-            <li class="fragment">Physical interfaces for sign-ups</li>
-            <li class="fragment">Self-check</li>
-            <li class="fragment">…</li>
+            <li>Web-enabled gate counts</li>
+            <li>Gathering data about the library</li>
+            <li>Physical interfaces for sign-ups</li>
+            <li>Self-check/mobile checkout/offline circulation device</li>
+            <li>…</li>
         </ul>
     </div>
 </section>
@@ -183,10 +196,10 @@
     <div>How many laptops are left?</div>
     <div>
         <ul>
-            <li class="fragment">Code it up</li>
-            <li class="fragment">Plug it in</li>
-            <li class="fragment">Upload the sketch</li>
-            <li class="fragment">Run it!</li>
+            <li>Code it up</li>
+            <li>Plug it in</li>
+            <li>Upload the sketch</li>
+            <li>Run it!</li>
         </ul>
     </div>
 </section>
@@ -196,11 +209,12 @@
 <section>
     <h2>Questions?</h2>
     <div>
-        <img src="images/23691780.jpg" alt="http://cdn.memegenerator.net/instances/400x/23691780.jpg"  class="fragment">
+        <img src="images/23691780.jpg" alt="http://cdn.memegenerator.net/instances/400x/23691780.jpg" >
         <br>
 		<ul>
-			<li class="fragment"> Jonathan Younker <a href="https://twitter.com/jtyounker">@jtyounker</a></li>
-			<li class="fragment"> Tim Ribaric <a href="http://twitter.com/elibtronic">@elibtronic</a></li>
+			<li> Jonathan Younker <a href="https://twitter.com/jtyounker">@jtyounker</a> <a href="https://github.com/jyounker/">Github</a></li>
+			<li> Tim Ribaric <a href="http://twitter.com/elibtronic">@elibtronic</a> <a href="https://github.com/elibtronic">Github</a></li>
+			<li><a href="http://www.library.brocku.ca/OLA">http://www.library.brocku.ca/OLA</a></li>
     </div>
 </section>
 <section>
@@ -214,7 +228,12 @@
 			<li>O'Reilly books</li>
 		</ul>
 	</div>
-</div>
+</section>
+<section>
+	<h2>Thank You!</h2>
+	<h3>Now go make something cool</h3>
+	<p>Made by hand with <a href="https://github.com/hakimel/reveal.js">reveal.js</a></p>
+</section>
 
 
 		</div>
